Prevent nested scrollbars

--- a/src/apps/datatables/client/css/dataTables.bootstrap.extra.css
+++ b/src/apps/datatables/client/css/dataTables.bootstrap.extra.css
@@ -1,3 +1,7 @@
 .dataTables_scrollBody thead {
   visibility: hidden;
 }
+
+.datahub-datatable-no-scroll {
+  overflow-x: hidden !important;
+}
